# piebro.github.io

./: 2017_influx_exhibition.html  about.html  index.html  pyproject.toml  style.css  update_repo_start_count.py
.github/workflows/: update_repo_star_count.yml
blog/: index.html  md_to_html.py  style.css
blog/2025_02_17_recreating_album_cover/: index.html  index.md
blog/2025_02_21_importing_music_to_an_old_ipod/: index.html  index.md
blog/2025_11_02_using_duck_db_for_openstreetmap_statistics/: index.html  index.md
